fixed spacing between button and chat embed and popups

--- a/sleakbot.css
+++ b/sleakbot.css
@@ -49,7 +49,7 @@
   box-shadow: 0 25px 50px -12px #00000040;
   height: 100%;
   max-height: 700px;
-  bottom: 98px;
+  bottom: 88px;
   border-radius: 20px;
   border: solid 2px #e6e6e6;
   width: 100%;
@@ -105,7 +105,7 @@
   flex-direction: column;
   height: auto;
   width: auto;
-  bottom: 98px;
+  bottom: 88px;
   transition: height linear;
 }
 
